--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh -oT StrictHostKeyChecking=no -i ~/.ssh/id_rsa $USERNAME@$HOST << EOF
+          ssh -T -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa $USERNAME@$HOST << EOF
             cd /home/ubuntu/vite-simple-deploy
             git pull
             npm ci
